Genomic and Generic Assay bin counts endpoints